--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -9,7 +9,7 @@ jobs:
   build:
     strategy:
       matrix:
-        java: ['11', '13']
+        java: ["11", "13"]
     runs-on: ubuntu-latest
 
     steps:
