--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,8 @@
 
 
 plugins {
+    id 'groovy'
+    id 'idea'
     id 'java-library'
     id 'maven-publish'
     id 'signing'
@@ -12,7 +14,8 @@ repositories {
 }
 
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.5.1'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.5.2'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.5.2'
 }
 
 group = 'com.datadoghq'
@@ -29,6 +32,10 @@ task sourcesJar(type: Jar) {
 task javadocJar(type: Jar) {
     archiveClassifier = 'javadoc'
     from javadoc.destinationDir
+}
+
+tasks.test {
+    useJUnitPlatform()
 }
 
 publishing {
