--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -13,7 +13,7 @@ jobs:
       - uses: actions/checkout@v1
       - name: Write maven configuration
         run: |
-          touch -p $HOME/.m2
+          mkdir -p $HOME/.m2
           echo <<SETTINGS > $HOME/.m2/settings.xml
           <?xml version="1.0" encoding="UTF-8"?>
           <settings xmlns="http://maven.apache.org/SETTINGS/1.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/SETTINGS/1.0.0 http://maven.apache.org/xsd/settings-1.0.0.xsd">
@@ -29,6 +29,6 @@ jobs:
       - name: Set up JDK
         uses: actions/setup-java@v1
         with:
-          java-version: 1.11
+          java-version: 11
       - name: Build with Gradle
         run: ./gradlew publish
