--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -13,19 +13,13 @@ jobs:
       - uses: actions/checkout@v1
       - name: Write maven configuration
         run: |
-          mkdir -p $HOME/.m2
-          echo <<SETTINGS > $HOME/.m2/settings.xml
-          <?xml version="1.0" encoding="UTF-8"?>
-          <settings xmlns="http://maven.apache.org/SETTINGS/1.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/SETTINGS/1.0.0 http://maven.apache.org/xsd/settings-1.0.0.xsd">
-              <servers>
-                  <server>
-                      <id>github</id>
-                      <username>actions</username>
-                      <password>${{ secrets.GITHUB_TOKEN }}</password>
-                  </server>
-              </servers>
-          </settings>
-          SETTINGS
+          mkdir -p $HOME/.gradle
+
+
+          echo <<EOF > $HOME/.gradle/gradle.properties
+          mavenUser=actions
+          mavenPassword=${{ secrets.GITHUB_TOKEN }}
+          EOF
       - name: Set up JDK
         uses: actions/setup-java@v1
         with:
